# Procesory-sygnalowe

./: .gitmodules  CMakeLists.txt  README.md  README.md.backup
src/: CMakeLists.txt  ConsoleParser.cpp  ConsoleParser.h  ConsoleProcessor.cpp  ConsoleProcessor.h  main.cpp
src/console/: ConsoleParser.cpp  ConsoleParser.h  ConsoleProcessor.cpp  ConsoleProcessor.h
src/effects/: Amplify.cpp  Amplify.h  CMakeLists.txt  Delay.cpp  Delay.h  Echo.cpp  Echo.h  EffectCreator.h  Fade.cpp  Fade.h  HighPassFilter.cpp  HighPassFilter.h  IEffect.h  Invert.cpp  Invert.h  LowPassFilter.cpp  LowPassFilter.h  Reverse.cpp  Reverse.h  Validator.h
